tests/compiler/diagnostics-engine/tests/invalid-subroutine/expected.txt
error: Expected '}', got 'function'
 --> source.jack:4:9
  |
4 |         function void g() {}
  |         ^~~~~~~~

error: Invalid class member declaration: found 'function'.
 --> source.jack:4:9
  |
4 |         function void g() {}
  |         ^~~~~~~~
note: Expected a class variable or subroutine declaration.
